# Assistant

./: .gitignore  Spacefile  bot.py  chat.py  data.pth  intents-v2.json  intents.json  mailer.py  main.py  model.py  nltk_utils.py  pyproject.toml  replies.py  requirements.txt  robot.py  scheduler.py  training.py  weather.py
