[tool.poetry]
name = "repl_nix_Assistant"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
numpy = "^1.24.2"
requests = "^2.28.2"
Flask-Cors = "^3.0.10"
telebot = "^0.0.5"
torch = "^2.0.0"
waitress = "^2.1.2"
Flask = "^2.2.3"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
